--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <!-- jquery ui -->
     <link href="css/jquery-ui.min.css" rel="stylesheet">
     <script type="text/javascript" src="js/jquery-ui.min.js"></script>
+    <!-- Fonts -->
+    <link href='https://fonts.googleapis.com/css?family=Press+Start+2P' rel='stylesheet' type='text/css'>
     <!-- custom js and css  -->
     <script src="js/snakegame.js"></script>
     <link href="css/custom.css" rel="stylesheet">
@@ -20,17 +22,16 @@
     <div class="container game-body">
       <div class="row">
         <div class="col-xs-12 text-center">
+          <h5 class="high-Score">High Score: 0</h5>
+        </div>
+        <div class="col-xs-12 text-center">
+          <canvas id="canvas" width="450" height="450"></canvas>
+        </div>
+        <div class="col-xs-12 text-center">
           <p>P1:&#8593;/&#8595;/&#8592;/&#8594; P2:W/S/A/D</p>
         </div>
         <div class="col-xs-12 text-center">
-          <canvas id="canvas" width="200" height="200"></canvas>
-        </div>
-        <div class="col-xs-12 text-center">
-          <h5>Score: 0</h5>
-          <button id="onePlayer-button" type="button" data-button='{"id": "3424"}' class="btn btn-default"><div class="col-xs-12">
-          1 Player</div>
-          <button id="twoPlayer-button" type="button" data-button='{"id": "3424"}' class="btn btn-default"><div class="col-xs-12">
-          2 Player</div>
+          <h5 class="Score">Score: 0</h5>
         </div>
         <div class="col-xs-12 text-center">
             <label for="amount">Speed: <span id="speed-limit">Normal</span></label>
